--- a/requirements.txt
+++ b/requirements.txt
@@ -1,110 +1,28 @@
-annotated-types==0.6.0
-anyio==4.2.0
-appnope==0.1.3
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.0
-async-lru==2.0.4
-attrs==23.2.0
-Babel==2.14.0
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.1.0
-certifi==2023.7.22
-cffi==1.16.0
-charset-normalizer==3.3.2
-comm==0.1.4
-credit==0.0.1
-creds==1.0.15
-debugpy==1.8.0
-decorator==5.1.1
-defusedxml==0.7.1
-executing==2.0.0
-fastjsonschema==2.19.1
-filelock==3.13.1
-fqdn==1.5.1
-fsspec==2023.10.0
-huggingface-hub==0.17.3
-idna==3.4
-ipykernel==6.25.2
-ipython==8.16.1
-isoduration==20.11.0
-jedi==0.19.1
-Jinja2==3.1.2
-joblib==1.4.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.20.0
-jsonschema-specifications==2023.12.1
-jupyter-events==0.9.0
-jupyter-lsp==2.2.1
-jupyter_client==8.4.0
-jupyter_core==5.4.0
-jupyter_server==2.12.3
-jupyter_server_terminals==0.5.1
-jupyterlab==4.0.10
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
-MarkupSafe==2.1.3
-matplotlib-inline==0.1.6
-mistune==3.0.2
-nbclient==0.9.0
-nbconvert==7.14.0
-nbformat==5.9.2
-nest-asyncio==1.5.8
-notebook_shim==0.2.3
-numpy==1.26.1
-overrides==7.4.0
-packaging==23.2
-pandas==2.2.2
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-platformdirs==3.11.0
-prometheus-client==0.19.0
-prompt-toolkit==3.0.39
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-pydantic==2.5.2
-pydantic_core==2.14.5
-Pygments==2.16.1
-python-dateutil==2.8.2
-python-json-logger==2.0.7
+click==8.1.7
+cloudpickle==3.0.0
+colorama==0.4.6
+dask==2023.4.1
+fastapi==0.110.1
+fsspec==2024.3.1
+importlib_metadata==7.1.0
+joblib==1.3.2
+locket==1.0.0
+numpy==1.24.4
+packaging==24.0
+pandas==2.0.3
+partd==1.4.1
+python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
-pyzmq==25.1.1
-referencing==0.32.1
-regex==2023.10.3
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.16.2
-safetensors==0.4.0
-scikit-learn==1.5.0
-scipy==1.13.1
-Send2Trash==1.8.2
+scikit-elm==0.21a0
+scikit-learn==1.3.2
+scipy==1.10.1
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.5
-stack-data==0.6.3
-terminado==0.18.0
-threadpoolctl==3.5.0
-tinycss2==1.2.1
-tokenizers==0.14.1
-tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.11.2
-transformers==4.35.0
-types-python-dateutil==2.8.19.20240106
-typing_extensions==4.8.0
+StandardScaler==0.5
+threadpoolctl==3.4.0
+toolz==0.12.1
 tzdata==2024.1
-uri-template==1.3.0
-urllib3==2.0.7
-wcwidth==0.2.8
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.7.0
+zipp==3.18.1
+matplotlib
+uvicorn==0.24.0.post1
+pydantic~=2.6.4
